[GovWayCore] Corretti errori introdotti con il precedente commit